--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -64,12 +64,12 @@
   /* Opera/IE 8+ */ }
 
 body {
-  background-color: #fff;
+  background-color: #b84343;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
   margin: 0;
   padding: 0;
-  color: #3E4152; }
+  color: #fff; }
 
 h1 {
   font-size: 2.6em;
@@ -115,7 +115,7 @@ button, input[type=submit], .button {
   transition: all 0.25s ease-in-out; }
 
 a {
-  color: #3E4152;
+  color: #fff;
   font-weight: normal;
   -moz-transition: all 0.25s ease-in-out;
   -o-transition: all 0.25s ease-in-out;
@@ -163,7 +163,19 @@ img, a img, img.noborder {
 
 /* content  */
 #content {
-  padding: 40px; }
+  padding: 40px;
+  width: 40%; }
+  #content h1 {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1em;
+    margin: 0 0 5px 0;
+    padding: 5px 0 0 0;
+    display: inline-block;
+    border-top: 2px solid #fff; }
+  #content h2 {
+    font-size: 1em;
+    margin: 0; }
 
 #langs {
   list-style-type: none;
@@ -182,6 +194,13 @@ img, a img, img.noborder {
     border-radius: 50%; }
 
 #langChart {
-  float: left; }
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  width: 80%;
+  height: 80%; }
 
 /*# sourceMappingURL=style.css.map */
